# esp32-embassy-example

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
src/: lib.rs  main.rs
