[package]
name = "esp32-embassy-example"
version = "0.1.0"
edition = "2021"
authors = ["Christian M <chriamue@gmail.com>"]
license = "MIT"

[dependencies]
esp32c3-hal = { version = "0.15.0", features = [
    "async",
    "embassy",
    "embassy-time-timg0",
    "embassy-executor-thread",
] }
esp-backtrace = { version = "0.9.0", features = [
    "esp32c3",
    "panic-handler",
    "exception-handler",
    "print-uart",
] }
esp-println = { version = "0.7.0", features = ["esp32c3"] }
embassy-executor = { version = "0.5.0", features = [
    "nightly",
    "integrated-timers",
    "arch-riscv32",
    #"executor-thread", # conflicts with embassy-executor-thread
] }
embassy-time = { version = "0.3.0" }
embassy-sync = "0.5.0"
embedded-hal-async = "1.0.0"
embedded-io-async = "0.6.1"
portable-atomic = "1.5.1"
