[package]
name = "esp32-embassy-example"
version = "0.1.0"
edition = "2021"
authors = ["Christian M <chriamue@gmail.com>"]
license = "MIT"

[features]
default = ["esp32c3"]
esp32c3 = []
esp32s3 = []

[dependencies]
embassy-executor = { version = "0.5.0", features = [
    "nightly",
    "integrated-timers",
    "arch-riscv32",
    #"executor-thread", # conflicts with embassy-executor-thread
] }
embassy-time = { version = "0.3.0" }
embassy-sync = "0.5.0"
embedded-hal-async = "1.0.0"
embedded-io-async = "0.6.1"
portable-atomic = "1.5.1"

[target.riscv32imc-unknown-none-elf.dependencies]
esp32c3-hal = { version = "0.15.0", features = [
    "async",
    "embassy",
    "embassy-time-timg0",
    "embassy-executor-thread",
] }
esp-println = { version = "0.7.1", features = ["esp32c3"] }
esp-backtrace = { version = "0.9.0", features = [
    "esp32c3",
    "panic-handler",
    "exception-handler",
    "print-uart",
] }

[target.xtensa-esp32s3-none-elf.dependencies]
esp32s3-hal = { version = "0.15.0", features = [
    "async",
    "embassy",
    "embassy-time-timg0",
    "embassy-executor-thread",
] }
esp-println = { version = "0.7.1", features = ["esp32s3"] }
esp-backtrace = { version = "0.9.0", features = [
    "esp32s3",
    "panic-handler",
    "exception-handler",
    "print-uart",
] }
