[package]
name = "esp32-embassy-example"
version = "0.1.0"
edition = "2021"
authors = ["Christian M <chriamue@gmail.com>"]
license = "MIT"

resolver = "2"

[lib]

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = [
    "esp32c3",
    "alloc",
    "embassy",
    "nightly",
    "esp-idf-svc/native",
    "esp-idf-svc/panic_handler",
    "esp-idf-svc/alloc_handler",
    "esp-idf-svc/libstart",
]
esp32c3 = []
esp32s3 = []
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/embassy-time-driver"]

[dependencies]
anyhow = { version = "1", default-features = false }
embassy-executor = { version = "0.5.0", features = [
    "nightly",
    "integrated-timers",
    "arch-riscv32",
    #"executor-thread", # conflicts with embassy-executor-thread
] }
embassy-time = { version = "0.3.0" }
embassy-sync = "0.5.0"
embedded-graphics = "0.8.1"
embedded-hal-async = "1.0.0"
embedded-io-async = "0.6.1"
portable-atomic = "1.5.1"
ssd1306 = "0.8.4"

esp-idf-svc = { version = "0.48", default-features = false }
esp-idf-sys = { version = "0.34.1", default-features = false }
esp-idf-hal = { version = "0.43.0", default-features = false, features = [
    "embassy-sync",
] }

[target.riscv32imc-unknown-none-elf.dependencies]
esp32c3-hal = { version = "0.15.0", features = [
    "async",
    "embassy",
    "embassy-time-timg0",
    "embassy-executor-thread",
] }
esp-println = { version = "0.7.1", features = ["esp32c3"] }
esp-backtrace = { version = "0.9.0", features = [
    "esp32c3",
    "panic-handler",
    "exception-handler",
    "print-uart",
] }

[target.xtensa-esp32s3-espidf.dependencies]
esp32s3-hal = { version = "0.15.0", features = [
    "async",
    "embassy",
    "embassy-time-timg0",
    "embassy-executor-thread",
] }
esp-println = { version = "0.7.1", features = ["esp32s3"] }
esp-backtrace = { version = "0.9.0", features = [
    "esp32s3",
    "panic-handler",
    "exception-handler",
    "print-uart",
] }

[build-dependencies]
anyhow = "1"
dotenv = "0.15.0"
#embuild = { version = "0.31.4", features = ["espidf"] }

embuild = "0.31.3"
